--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "securityfrontend",
+  "homepage": "https://kofoednet.systems/CA2FrontEnd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
